--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,29 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.outjected</groupId>
 	<artifactId>itext-helper</artifactId>
-	<version>1.0.1</version>
+	<version>1.1.0-SNAPSHOT</version>
+
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<version.java>1.8</version.java>
+		<version.plugin.compiler>3.5.1</version.plugin.compiler>
+		<version.plugin.source>3.0.1</version.plugin.source>
+	</properties>
+
+	<distributionManagement>
+		<repository>
+			<id>central</id>
+			<name>calcium-releases</name>
+			<url>http://calcium.clearfly.net:8081/artifactory/libs-release</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>calcium-snapshots</name>
+			<url>http://calcium.clearfly.net:8081/artifactory/libs-snapshot</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.lowagie</groupId>
@@ -31,15 +53,16 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.1</version>
+				<version>${version.plugin.compiler}</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${version.java}</source>
+					<target>${version.java}</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
+				<version>${version.plugin.source}</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
