--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.outjected</groupId>
 	<artifactId>itext-helper</artifactId>
-	<version>2.1.0-SNAPSHOT</version>
+	<version>2.1.0</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<version.java>1.8</version.java>
-		<version.plugin.compiler>3.5.1</version.plugin.compiler>
+		<version.plugin.compiler>3.8.0</version.plugin.compiler>
 		<version.plugin.source>3.0.1</version.plugin.source>
 	</properties>
 
