--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
-sudo: false
+dist: xenial
+
 language: java
-addons:
-  apt:
-    packages:
-    - oracle-java8-installer
+
 jdk:
-- oraclejdk8
+- openjdk8
+
 cache:
   directories:
   - $HOME/.m2
