--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.outjected</groupId>
 	<artifactId>itext-helper</artifactId>
-	<version>2.2.6</version>
+	<version>2.2.7</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<version.java>1.8</version.java>
+		<version.openpdf>1.3.11</version.openpdf>
 		<version.plugin.compiler>3.8.1</version.plugin.compiler>
 		<version.plugin.source>3.1.0</version.plugin.source>
 	</properties>
@@ -29,7 +30,7 @@
 		<dependency>
 			<groupId>com.github.librepdf</groupId>
 			<artifactId>openpdf</artifactId>
-			<version>1.3.8</version>
+			<version>${version.openpdf}</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
