--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.outjected</groupId>
 	<artifactId>itext-helper</artifactId>
-	<version>2.2.7</version>
+	<version>2.2.8</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<version.java>1.8</version.java>
-		<version.openpdf>1.3.11</version.openpdf>
+		<version.java>11</version.java>
+		<version.openpdf>1.3.12</version.openpdf>
 		<version.plugin.compiler>3.8.1</version.plugin.compiler>
 		<version.plugin.source>3.2.1</version.plugin.source>
 	</properties>
@@ -41,8 +41,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${version.plugin.compiler}</version>
 				<configuration>
-					<source>${version.java}</source>
-					<target>${version.java}</target>
+					<release>${version.java}</release>
 				</configuration>
 			</plugin>
 			<plugin>
